test: adding controller and service tests and build related packages